# cookiecutter-computer-vision

./: cookiecutter.json
{{ cookiecutter.repo_name }}/: .gitignore  Makefile  setup.cfg
