[metadata]
name = '{{ cookiecutter.project_name }}'
version = 0.0.1
author = '{{ cookiecutter.author_name }}'
author-email = '{{ cookiecutter.author_email }}'
description = '{{ cookiecutter.description }}'
long_description = file: README.rst

[options]
install_requires =
    # package listings go here. e.g.
    # matplotlib == 3.1.1
    # opencv-python == 4.1.0.25
packages = '{{ cookiecutter.project_name }}'
