[metadata]
name = {{ cookiecutter.project_name }}
version = 0.0.1
author = {{ cookiecutter.author_name }}
author-email = {{ cookiecutter.author_email }}
description = {{ cookiecutter.description }}
long_description = file: README.md

[options]
install_requires =
    # package listings go here. e.g.
packages = find:
